--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,9 @@ bind-key K resize-pane -U 10
 bind-key H resize-pane -L 10
 bind-key L resize-pane -R 10
 
+# Disable confirm before killing
+bind-key x kill-pane
+
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Nov 2015
 set -g status "on"
