Update zshrc aliases and return to more vanilla tmux/alacritty workflow

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,11 +10,6 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# Split horiziontal and vertical splits, instead of % and "
-# Also open them in the same directory
-bind-key v split-window -h -c '#{pane_current_path}'
-bind-key s split-window -v -c '#{pane_current_path}'
-
 # Pressing Ctrl+Shift+Left (will move the current window to the left. Similarly
 # right. No need to use the modifier (C-b).
 bind-key -n C-S-Left swap-window -t -1
@@ -37,7 +32,7 @@ set -g default-terminal "xterm-256color"
 set -s escape-time 0
 
 # Enable mouse mode
-set-option -g -q mouse on
+set -g mouse on
 
 # Set title
 set -g set-titles on
@@ -50,6 +45,11 @@ set -g history-limit 1000000
 bind-key = select-layout even-horizontal
 bind-key | select-layout even-vertical
 
+#vi copy
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
 # Resize panes
 bind-key J resize-pane -D 10
 bind-key K resize-pane -U 10
@@ -58,6 +58,7 @@ bind-key L resize-pane -R 10
 
 # Disable confirm before killing
 bind-key x kill-pane
+bind-key & kill-window
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Nov 2015
