--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,11 @@ bind-key L resize-pane -R 10
 bind-key x kill-pane
 bind-key & kill-window
 
+# Open new windows and panes in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Nov 2015
 set -g status "on"
