--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,7 @@ setw -g pane-base-index 1
 
 # {n}vim compability
 set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Faster command sequence
 set -s escape-time 0
