--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,6 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Pressing Ctrl+Shift+Left (will move the current window to the left. Similarly
 # right. No need to use the modifier (C-b).
@@ -73,27 +72,20 @@ set -g status-bg "colour236"
 set -g status-justify "left"
 set -g status-position "top"
 set -g status-left-length "100"
-set -g status-left-attr "none"
+set -g status-left-style "none"
 set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g status-attr "none"
+set -g status-right-style "none"
 set -g status-left "#{prefix_highlight}#[fg=colour22,bg=#fac863,bold] #S #[fg=colour148,bg=colour236,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour240] %Y-%m-%d %H:%M #[fg=colour252,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour241,bg=colour252] #h "
 
 set -g pane-active-border-style fg='#FAC863'
-set -g pane-border-style fg='#C0C5CE'
+set -g pane-border-style 'fg=#C0C5CE'
 
-set -g message-command-fg "colour231"
-set -g message-bg "colour240"
-set -g message-fg "colour231"
-set -g message-command-bg "colour240"
+set -g message-style "bg=colour240,fg=colour231"
+set -g message-command-style "fg=colour231,bg=colour240"
 
-setw -g window-status-fg "colour245"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour236"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour148"
+setw -g window-status-style "bg=colour236,fg=colour245,none"
+setw -g window-status-activity-style "bg=colour236,fg=colour148,none"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour236"
 setw -g window-status-format "#[fg=colour245,bg=colour236] #I #[fg=colour245,bg=colour236]#W "
 setw -g window-status-current-format "#[fg=colour236,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour240] #I #[fg=colour231,bg=colour240]#{?window_zoomed_flag,#[fg=green][],}#W #[fg=colour240,bg=colour236,nobold,nounderscore,noitalics]"
