--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Set bash as default shell
+set-option -g default-shell /bin/bash
+
 # Set prefix key to c-f instead of default c-b
 unbind C-b
 set -g prefix C-f
