--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,10 +54,10 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Resize panes
-bind-key -n C-Down resize-pane -D 5
-bind-key -n C-Up resize-pane -U 5
-bind-key -n C-Left resize-pane -L 5
-bind-key -n C-Right resize-pane -R 5
+bind-key -n ∆ resize-pane -D 5
+bind-key -n ˚ resize-pane -U 5
+bind-key -n ˙ resize-pane -L 5
+bind-key -n ¬ resize-pane -R 5
 
 # Disable confirm before killing
 bind-key x kill-pane
