--- a/alacritty.yml
+++ b/alacritty.yml
@@ -346,7 +346,7 @@ live_config_reload: true
 #   - (Linux) user login shell
 #   - (Windows) powershell
 shell:
- program: /bin/bash
+ program: /bin/zsh
  args:
    - --login
 
