--- a/.shellrc
+++ b/.shellrc
@@ -123,16 +123,11 @@ export PATH="$PATH:$HOME/.cargo/bin"
 #=================
 alias be='bundle exec'
 
-# rbenv
-export PATH="$HOME/.rbenv/shims:$PATH"
-eval "$(rbenv init -)"
-
 #=================
 # Javascript
 #=================
 export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
-NPM_PACKAGES="$HOME/.npm-packages"
-export PATH="$PATH:$NPM_PACKAGES/bin"
+export PATH="$HOME/.npm-global/bin:$PATH"
 
 #=================
 # Secrets
