Update bash settings with autocompletions Update gitignore Add WIP autosave script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 config/gatsby
 config/gh/hosts.yml
-config/cms_vpn
 config/configstore
 config/yarn
 config/exercism/user.json
+config/nvim/.luarc.json
