--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Pressing Ctrl+Shift+Left (will move the current window to the left. Similarly
-# right. No need to use the modifier (C-b).
+# right. No need to use the modifier (C-f).
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
@@ -27,9 +27,18 @@ set -g renumber-windows on
 set -g base-index 1
 setw -g pane-base-index 1
 
+# ==================
 # {n}vim compability
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# MacOS ships with a very old ncurses and terminfo. May need to update terminfo to recognize tmux-256color. 
+# https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
+set -g default-terminal "tmux-256color"
+
+set-option -gas terminal-overrides "*:Tc" # true color support
+set-option -gas terminal-overrides "*:RGB" # true color support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set-option -g focus-events on # required to help autoread in neovim
+# ==================
 
 # Faster command sequence
 set -s escape-time 0
