--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -51,6 +51,13 @@ window:
   #     - buttonless: Title bar, transparent background, but no title bar buttons
   decorations: full
 
+  # Make `Option` key behave as `Alt` (macOS only):
+  #   - OnlyLeft
+  #   - OnlyRight
+  #   - Both
+  #   - None (default)
+  option_as_alt: Both
+
   # Startup Mode (changes require restart)
   #
   # Values for `startup_mode`:
@@ -369,9 +376,6 @@ working_directory: None
 # Alacritty will fall back to the WinPTY automatically if the ConPTY
 # backend cannot be initialized.
 enable_experimental_conpty_backend: false
-
-# Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
 
 debug:
   # Display the time it takes to redraw each frame.
