Attempt at combined configuration across OS

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Set bash as default shell
-set-option -g default-shell /opt/homebrew/bin/bash
+set-option -g default-shell ${SHELL}
 
 # Set prefix key to c-f instead of default c-b
 unbind C-b
