--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -5,8 +5,8 @@ background = #1b2b34
 cursor-text = #d8dee9
 cursor-color = #ec5f67
 
-keybind = ctrl+shift+h=goto_split:left
-keybind = ctrl+shift+j=goto_split:bottom
-keybind = ctrl+shift+k=goto_split:top
-keybind = ctrl+shift+l=goto_split:right
+keybind = alt+h=goto_split:left
+keybind = alt+j=goto_split:bottom
+keybind = alt+k=goto_split:top
+keybind = alt+l=goto_split:right
 
