Add url fuzzy finding and conf reloading to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,12 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
+# URL Launcher
+bind-key -n C-S-o run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
+
+# Reload configuration
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # Pressing Ctrl+Shift+Left (will move the current window to the left. Similarly
 # right. No need to use the modifier (C-f).
 bind-key -n C-S-Left swap-window -t -1
