Improve tmux url launcher

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # URL Launcher
-bind-key -n C-S-o run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
+bind-key -n C-S-o run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf --tmux bottom,80%,40% -m | xargs open"
 
 # Reload configuration
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
