Fix wallpaper to work for all monitors Start work on hyprlock for lock screen Improve look of app picker Add Oceanic Next color palette

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/wallpaper/blue-planet.jpg
-wallpaper = DP-2,~/wallpaper/blue-planet.jpg
+preload = ~/wallpaper/blue-texture.jpg
+wallpaper = ,~/wallpaper/blue-texture.jpg
