--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,3 +1,5 @@
+//  killall -SIGUSR2 waybar to reload waybar 
+
 {
   "layer": "top",
   "position": "top",
@@ -16,6 +18,7 @@
       "*": [ 1,2,3,4,5 ]
     }
   },
+
   "clock": {
     "format": "{:%I:%M:%S %p} ",
     "interval": 1,   
@@ -30,6 +33,7 @@
       "on-click": "shift_up"
     }
   },
+
   "network": {
     "format-wifi": "",
     "format-ethernet":"󰈀",
@@ -39,6 +43,7 @@
     "tooltip-format-ethernet": "{ifname} 󰈀 ",
     "on-click": "ghostty -e nmtui"
   },
+
   "bluetooth": {
     "format-on": "󰂯",
     "format-off": "BT-off",
@@ -51,6 +56,7 @@
     "tooltip-format-enumerate-connected-battery": "{device_alias}\n{device_address}\n{device_battery_percentage}%",
     "on-click-right": "blueman-manager",
   }, 
+
   "battery": {
     "interval":30,
     "states": {
