Update hyprpaper to match new config format

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,8 @@
-preload = ~/wallpaper/blue-texture.jpg
-wallpaper = ,~/wallpaper/blue-texture.jpg
+splash = false
+
+wallpaper {
+  monitor = 
+  path = ~/wallpaper/ice-mountains.jpg
+  fit_mode = cover
+}
+
